--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -10,18 +10,22 @@
     <ImageView
         android:id="@+id/imgItemDetail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="200sp" />
 
     <TextView
         android:id="@+id/tvTituloDetail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:gravity="center"
+        android:padding="20sp"
+        android:textSize="30dp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvDescripcionDetail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14sp" />
+        android:padding="20dp"
+        android:gravity="center"
+        android:textSize="20sp"/>
 </LinearLayout>
